--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#837272</color>
+    <color name="orange">#FF5722</color>
+    <color name="blue">#673AB7</color>
 </resources>
