--- a/app/src/main/res/layout/activity_main_hamza.xml
+++ b/app/src/main/res/layout/activity_main_hamza.xml
@@ -7,6 +7,19 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+    <com.google.android.material.appbar.MaterialToolbar
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        app:title="@string/app_name"
+        app:titleTextColor="@color/white"
+        android:background="@color/green"
+        app:navigationIconTint="@color/white"
+        app:navigationIcon="@drawable/baseline_menu_24"
+        android:id="@+id/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
